--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <title>Contrar.IO Company</title>
-</head>
-<body>
-    <header class="cabecalho">
-        <div class="logomarca">
-                    <h2>Contrar.IO</h2>
-        </div>
-        <div class="menu">
-            <ul id="menu">
-                <li><a href="#">Categorias</a></li>
-                <li><a href="#">Minha Conta</a></li>
-                <li><input type="search"><button><i class="fas fa-search"></i></button></li>
-            </ul>
-        </div>
-    </header>
-    <section></section>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+    <title>Relógio Digital</title>
+  </head>
+  <body>
+    <main class="main">
+      <section class="data">
+        <h2 class="diaAtual"></h2>
+      </section>
+      <section class="box-relogio">
+        <div class="hora"></div>
+        <p>:</p>
+        <div class="minuto"></div>
+        <p>:</p>
+        <div class="segundo"></div>
+      </section>
+    </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
